--- a/public/css/theme/moon.css
+++ b/public/css/theme/moon.css
@@ -3,6 +3,8 @@
  * Author: Achim Staebler
  */
 
+ @import 'https://fonts.googleapis.com/css?family=Oxygen|Bitter|Roboto|Space+Mono';
+
 /**
  * Solarized colors by Ethan Schoonover
  */
@@ -18,7 +20,7 @@ body {
   background-color: #002b36; }
 
 .reveal {
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 36px;
   font-weight: normal;
   color: #93a1a1; }
@@ -44,7 +46,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee8d5;
-  font-family: "League Gothic", Impact, sans-serif;
+  font-family: "Oxygen", Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
@@ -52,13 +54,16 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+             font-family: "Bitter", Impact, sans-serif;
+      
+             font-size: 3.77em; 
+}
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 2.5em; }
 
 .reveal h3 {
-  font-size: 1.55em; }
+  font-size: 1.95em; }
 
 .reveal h4 {
   font-size: 1em; }
@@ -147,13 +152,13 @@ body {
   margin: 20px auto;
   text-align: left;
   font-size: 0.55em;
-  font-family: monospace;
+  font-family: "Space Mono", monospace;
   line-height: 1.2em;
   word-wrap: break-word;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
-  font-family: monospace; }
+  font-family: "Space Mono",monospace; }
 
 .reveal pre code {
   display: block;
